# urdf_sim_tutorial

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: holonomicdrive.yaml  mecanumdrive.yaml  turret.yaml  wheel.yaml
config/diffdrive/: head.yaml
config/holo/: wheel.yaml
launch/: 13-diffdrive.launch  bixi.launch  display.launch  gazebo.launch  holonomic.launch  mecanumdrive.launch
scripts/: drive.py  mecanum_drive.py  move_head.py  move_model.py  tank_drive.py
urdf/: 13-diffdrive.urdf.xacro  holo.urdf.xacro
urdf/bixi/urdf/: base.urdf.xacro  wheel.urdf.xacro
